[project]
authors = [{ name = "Ben Pedigo", email = "benjamindpedigo@gmail.com" }]
dependencies = []
description = "Utils for cloud computing"
name = "cloudigo"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
