[project]
authors = [{ name = "Ben Pedigo", email = "benjamindpedigo@gmail.com" }]
dependencies = [
    "kubernetes>=31.0.0",
]
description = "Utils for cloud computing"
name = "cloudigo"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
